--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "client": "cd client && npm run dev",
     "install-all": "npm install && cd client && npm install",
     "build": "cd client && npm install && npm run build",
-    "vercel-build": "npm run build"
+    "vercel-build": "npm run install-all && npm run build"
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.14.1",
