deleted:    build_instructions/assistant_file_search.md deleted:    build_instructions/assistant_function_caling.md deleted:    build_instructions/assistant_function_calling.md deleted:    build_instructions/assistant_quickstart.md deleted:    build_instructions/assistants_chat.md deleted:    build_instructions/assistants_deepdive.md deleted:    build_instructions/assistants_migration_guide.md deleted:    build_instructions/claude_pdf_instructions.md deleted:    build_instructions/comprehensive_breakdown_of_evertytghing.md deleted:    build_instructions/create_thread_run_api.md deleted:    build_instructions/example_code.txt deleted:    build_instructions/function_calling.md deleted:    build_instructions/functions.json deleted:    build_instructions/openai-run-api.md deleted:    build_instructions/openai-thread-api.md deleted:    build_instructions/rating_instructions.json deleted:    build_instructions/structured_outputs_info.md deleted:    build_instructions/test.md deleted:    build_instructions/text_completions.md deleted:    build_instructions/vector_store.md deleted:    build_instructions/vector_store_file_info.md deleted:    build_instructions/workbench_tools_guide.md modified:   client/src/App.jsx modified:   client/src/components/CaseLawResearcher.jsx modified:   client/src/components/ChatInterface.jsx new file:   client/src/components/LegalDocumentGenerator.jsx renamed:    client/src/components/PDFProcessor.jsx -> client/src/components/RateReports.jsx modified:   client/src/config/api.js modified:   client/src/index.css modified:   client/vite.config.js new file:   response.txt modified:   server.js 	modified:   services/assistantsService.js modified:   services/wordwareService.js 	modified:   vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,7 @@
       "use": "@vercel/static-build",
       "config": {
         "distDir": "dist",
-        "buildCommand": "npm run build"
+        "buildCommand": "npm install && npm run build"
       }
     },
     {
@@ -17,14 +17,14 @@
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "/server.js"
-    },
-    {
-      "handle": "filesystem"
+      "dest": "server.js"
     },
     {
       "src": "/(.*)",
-      "dest": "/client/dist/$1"
+      "dest": "client/dist/$1"
     }
-  ]
+  ],
+  "env": {
+    "NODE_ENV": "production"
+  }
 }
