--- a/vercel.json
+++ b/vercel.json
@@ -3,10 +3,9 @@
   "builds": [
     {
       "src": "client/package.json",
-      "use": "@vercel/static-build",
+      "use": "@vercel/vite",
       "config": {
-        "distDir": "dist",
-        "buildCommand": "npm install && npm run build"
+        "framework": "vite"
       }
     },
     {
@@ -18,6 +17,10 @@
     {
       "src": "/api/(.*)",
       "dest": "server.js"
+    },
+    {
+      "src": "/assets/(.*)",
+      "dest": "client/dist/assets/$1"
     },
     {
       "handle": "filesystem"
