--- a/vercel.json
+++ b/vercel.json
@@ -3,9 +3,10 @@
   "builds": [
     {
       "src": "client/package.json",
-      "use": "@vercel/vite",
+      "use": "@vercel/static-build",
       "config": {
-        "framework": "vite"
+        "distDir": "dist",
+        "buildCommand": "cd client && npm install && npm run build"
       }
     },
     {
@@ -19,15 +20,12 @@
       "dest": "server.js"
     },
     {
-      "src": "/assets/(.*)",
-      "dest": "client/dist/assets/$1"
+      "src": "^/assets/(.*)",
+      "dest": "/client/dist/assets/$1"
     },
     {
-      "handle": "filesystem"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "client/dist/index.html"
+      "src": "^/(?!api).*",
+      "dest": "/client/dist/index.html"
     }
   ],
   "env": {
