--- a/package.json
+++ b/package.json
@@ -1,28 +1,27 @@
 {
   "name": "ai-legal-assistant",
   "version": "1.0.0",
-  "description": "AI Legal Assistant with PDF Processing and Case Law Research",
+  "description": "AI Legal Assistant Application",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "server": "nodemon server.js",
-    "client": "cd client && npm run dev",
-    "install-all": "npm install && cd client && npm install",
-    "build": "cd client && npm install && npm run build",
-    "vercel-build": "npm run install-all && npm run build"
+    "install-deps": "npm install && cd client && npm install",
+    "build": "cd client && npm run build",
+    "postinstall": "npm run install-deps && npm run build"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   },
   "dependencies": {
-    "@anthropic-ai/sdk": "^0.14.1",
-    "@google-cloud/vertexai": "^1.9.2",
-    "@google/generative-ai": "^0.1.3",
-    "axios": "^1.3.5",
+    "@anthropic-ai/sdk": "^0.4.3",
+    "@google/generative-ai": "^0.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
     "openai": "^4.24.1",
-    "pdf-parse": "^1.1.1"
+    "pdf-parse": "^1.1.1",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "concurrently": "^8.0.1",
