--- a/nodeapp/.htaccess
+++ b/nodeapp/.htaccess
@@ -1,50 +1,89 @@
-RewriteEngine On
-RewriteBase /
-
-# Handle file uploads first
-RewriteCond %{REQUEST_METHOD} POST
-RewriteCond %{REQUEST_URI} ^/api/chat/upload
-RewriteRule ^(.*)$ http://127.0.0.1:4006/$1 [P,L]
-
-# Handle other API requests
-RewriteCond %{REQUEST_URI} ^/api/
-RewriteRule ^api/(.*)$ http://127.0.0.1:4006/api/$1 [P,L]
-
-# If the request is for an existing file or directory, serve it directly
-RewriteCond %{REQUEST_FILENAME} -f [OR]
-RewriteCond %{REQUEST_FILENAME} -d
-RewriteRule ^ - [L]
-
-# For all other requests, serve the React app's index.html
-RewriteRule ^ client/dist/index.html [L]
-
-# Enable reverse proxy settings for API with increased limits
-ProxyPass /api/ http://127.0.0.1:4006/api/ timeout=300 Keepalive=On
-ProxyPassReverse /api/ http://127.0.0.1:4006/api/
-
-# Specifically handle file upload endpoint
-ProxyPass /api/chat/upload http://127.0.0.1:4006/api/chat/upload timeout=300 Keepalive=On
-ProxyPassReverse /api/chat/upload http://127.0.0.1:4006/api/chat/upload
-
-# Set headers for proxy
-RequestHeader set X-Forwarded-Proto "https"
-RequestHeader set X-Forwarded-Port "443"
-
-# Increase timeout for large file uploads
-TimeOut 300
-ProxyTimeout 300
-
-# Allow large file uploads
-LimitRequestBody 104857600
-
-# Enable mod_headers
-<IfModule mod_headers.c>
-    Header set Access-Control-Allow-Origin "*"
-    Header set Access-Control-Allow-Methods "GET, POST, OPTIONS"
-    Header set Access-Control-Allow-Headers "Origin, X-Requested-With, Content-Type, Accept, Authorization"
-    Header set Access-Control-Max-Age "3600"
+# Enable required modules
+<IfModule mod_rewrite.c>
+    RewriteEngine On
     
-    # Handle preflight OPTIONS requests
+    # Handle CORS preflight requests
+    RewriteCond %{REQUEST_METHOD} OPTIONS
+    RewriteRule ^(.*)$ $1 [R=200,L]
+    
+    # Forward all API requests to Node.js server
+    RewriteCond %{REQUEST_URI} ^/api/
+    RewriteRule ^(.*)$ http://127.0.0.1:4006$1 [P,L,QSA]
+    
+    # Handle WebSocket connections
+    RewriteCond %{HTTP:Upgrade} websocket [NC]
+    RewriteCond %{HTTP:Connection} upgrade [NC]
+    RewriteRule ^/api/(.*) ws://127.0.0.1:4006/api/$1 [P,L]
+</IfModule>
+
+# Set CORS and security headers
+<IfModule mod_headers.c>
+    Header always set Access-Control-Allow-Origin "*"
+    Header always set Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS"
+    Header always set Access-Control-Allow-Headers "X-Requested-With, Content-Type, Origin, Authorization, Accept, Client-Security-Token, Accept-Encoding, X-CSRF-Token"
+    Header always set Access-Control-Expose-Headers "Content-Length, Content-Range"
+    Header always set Access-Control-Max-Age "3600"
+    
+    # Security headers
+    Header always set X-Content-Type-Options "nosniff"
+    Header always set X-Frame-Options "SAMEORIGIN"
+    Header always set X-XSS-Protection "1; mode=block"
+    
+    # Allow Authorization header
+    RewriteCond %{HTTP:Authorization} .
+    RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
+    
+    # Handle OPTIONS method
     RewriteCond %{REQUEST_METHOD} OPTIONS
     RewriteRule ^(.*)$ $1 [R=200,L]
 </IfModule>
+
+# Proxy configuration
+<IfModule mod_proxy.c>
+    ProxyRequests Off
+    ProxyPreserveHost On
+    
+    # Main API proxy
+    ProxyPass /api/ http://127.0.0.1:4006/api/ retry=0 timeout=300
+    ProxyPassReverse /api/ http://127.0.0.1:4006/api/
+    
+    # File upload specific configuration
+    ProxyPass /api/chat/upload http://127.0.0.1:4006/api/chat/upload retry=0 timeout=300
+    ProxyPassReverse /api/chat/upload http://127.0.0.1:4006/api/chat/upload
+    
+    # Set proxy headers
+    RequestHeader set X-Real-IP %{REMOTE_ADDR}s
+    RequestHeader set X-Forwarded-For %{REMOTE_ADDR}s
+    RequestHeader set X-Forwarded-Proto https env=HTTPS
+    
+    # Increase timeouts for large file uploads
+    ProxyTimeout 300
+    
+    # Enable required proxy modules
+    <IfModule mod_proxy_http.c>
+        # Additional proxy settings if needed
+    </IfModule>
+    
+    <IfModule mod_proxy_wstunnel.c>
+        # WebSocket proxy settings if needed
+        ProxyPass /api/ws ws://127.0.0.1:4006/api/ws
+        ProxyPassReverse /api/ws ws://127.0.0.1:4006/api/ws
+    </IfModule>
+</IfModule>
+
+# File upload limits
+<IfModule mod_php.c>
+    php_value upload_max_filesize 100M
+    php_value post_max_size 100M
+    php_value max_execution_time 300
+    php_value max_input_time 300
+</IfModule>
+
+LimitRequestBody 104857600
+
+# Error handling
+ErrorDocument 403 "Access Forbidden"
+ErrorDocument 404 "Not Found"
+ErrorDocument 500 "Internal Server Error"
+ErrorDocument 502 "Bad Gateway"
+ErrorDocument 503 "Service Unavailable"
